<resources>
    <string name="app_name">PhoneTAXX</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="no_search_result_available">No search results are available</string>
    <string name="no_data_available">No data available</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="declined">Declined</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="gallary">Gallery</string>
    <string name="camera">Camera</string>
    <string name="permission_for_camera">Allow Permission for camera</string>
    <string name="permission_for_call">Allow Permission for call</string>
    <string name="permission_for_storage">Allow Permission for storage</string>
    <string name="permission_for_location">You need to enable permissions to display location</string>
    <string name="email_address_or_phone_number">Email Address Or Phone number</string>
    <string name="sign_in_to_nphonetaxx">Sign in to \nPHONETAXX</string>
    <string name="forgot_phonetaxx">Forgot password</string>
    <string name="password">Password..</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="err_enter_email_or_phone">Please enter email or phone number</string>
    <string name="err_enter_phone">Please enter phone number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_new_account">Create a new \naccount</string>
    <string name="err_full_name">Please enter full name</string>
    <string name="err_term_and_condition">Please accept term and condition</string>
    <string name="err_enter_email">Please enter email</string>
    <string name="err_password">Please enter password</string>
    <string name="err_new_password">Please enter new password</string>
    <string name="err_confirm_password">Please enter confirm password</string>
    <string name="err_match_password">New password and confirm password does not match</string>
    <string name="full_name">Full Name</string>
    <string name="term_and_condition">I have read and agree with the Terms &amp; Conditions</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="verification_code">Verification \ncode</string>
    <string name="verify_your_account_by_entering_the_4_digits_code_we_sent_to">Verify your account by entering the 6
        digits code we sent to:
    </string>
    <string name="verify_otp">Verify Otp</string>
    <string name="resend_code_in">Resend Code in</string>
    <string name="resend_code">Resend Code</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="get_unlimited_calls">Get Unlimited Calls</string>
    <string name="business_expenses">BUSINESS EXPENSES</string>
    <string name="minutes_talked">minutes talked</string>
    <string name="calls">Calls</string>
    <string name="menu_uncategorized">Uncategorized</string>
    <string name="menu_phone_usase">Phone Usage</string>
    <string name="menu_home">Home</string>
    <string name="today">Today</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_help_support">Help/Support</string>
    <string name="menu_account_settings">Account Settings</string>
    <string name="menu_monthly_summaries">Monthly Summaries</string>
    <string name="account">Account</string>
    <string name="call_detection">Call Detection</string>
    <string name="notification">Notification</string>
    <string name="privacy">Privacy</string>
    <string name="monthly_phone_bill">Monthly Phone Bill</string>
    <string name="frequent_numbers">Frequent Numbers</string>
    <string name="free">Free</string>
    <string name="personalization">Personalization</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="push_notification">Push Notification</string>
    <string name="receive_messages_on_your_mobile_or_tablet_devices">Receive messages on your mobile or tablet devices
    </string>
    <string name="notification_sound">Notification Sound</string>
    <string name="uncategorized_calls">Uncategorized Calls</string>
    <string name="personal">Personal</string>
    <string name="assign">Assign</string>
    <string name="business">Business</string>
    <string name="all">All</string>
    <string name="overview">Overview</string>
    <string name="take_time">Talk time</string>
    <string name="business_calls">business calls</string>
    <string name="percentage">Usage</string>
    <string name="screen_time">Screen Time</string>
    <string name="recent_call">Recent Calls</string>
    <string name="recent_business_call">Recent Business Calls</string>
    <string name="recent_personal_call">Recent Personal Calls</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ytd_summary">YTD Summary</string>
    <string name="_100_potential">$100 Potential</string>
    <string name="go_to_phone_usage">Go to Phone Usage</string>
    <string name="view_all_calls">View All Calls</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="err_phone_number">Please enter phone number</string>
    <string name="err_phone_number_invalid">Please enter valid phone number</string>
    <string name="err_date">Please enter date</string>
    <string name="err_screen_time">Please screen time</string>
    <string name="err_invalid_screen_time">You can not enter screen time greater then actual screen time</string>
    <string name="err_relation">Please enter relation</string>
    <string name="amount">Amount</string>
    <string name="err_amount">Please enter amount</string>
    <string name="err_valid_amount">Please enter valid amount</string>
    <string name="send_resports_to">Send Reports from</string>
    <string name="xls">XLS</string>
    <string name="pdf">PDF</string>
    <string name="cvs">CSV</string>
    <string name="send_email">Send Email</string>
    <string name="add_new">Add New</string>
    <string name="introductory_plan">Introductory Plan</string>
    <string name="first_15_calls_after_app_download">First 15 calls manually categorized for free on Home Screen after Account Set-Up</string>
    <string name="subscription">Subscription Management</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="annual_plan">Annual Plan</string>
    <string name="billed_every_year">billed every year</string>
    <string name="terms_and_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="user_not_exist">User does not exist</string>
    <string name="please_enter_valid_email_or_phone_number">Please enter valid email or phone number</string>
    <string name="phone_number_is_already_exist">Phone number is already exist</string>
    <string name="phone_number_does_not_exist">Phone number does not exist</string>
    <string name="email_already_exist">Email is already exist</string>
    <string name="invalid_varification_code">Invalid verification code</string>
    <string name="code_send_success_message">Verification code has been sent successfully</string>
    <string name="not_able_to_delete_account">Not able to delete account</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="returned_from_app_settings_to_activity">Go to Settings %1$s</string>
    <string name="already_defined_in_this_category">Already defined in this category</string>
    <string name="phone_calls">Phone Calls</string>
    <string name="invalid_future_month_message">You can not select future month</string>
    <string name="currency_sign">$</string>
    <string name="potential">Potential</string>
    <string name="business_uses">Business Usage</string>
    <string name="personal_uses">Personal Usage</string>
    <string name="peronal_call">Personal Calls</string>
    <string name="uncategorized_Calls">Uncategorized Calls</string>
    <string name="view_all">View All</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="firebase_web_client_id">989102352075-osgh3chn26g1fghlpmamp7jnps6o0uq9.apps.googleusercontent.com
    </string>
    <string name="firebase_web_secret">trkIWJJkJutvgG1dyA7u3cH1</string>
    <string name="name">Name</string>
    <string name="relation">Relation</string>
    <string name="err_name">Please enter name</string>
    <string name="facebook_app_id">769030580537746</string>
    <string name="fb_login_protocol_scheme">fb769030580537746</string>
    <string name="business_screen_time">Business screen time</string>
    <string name="business_screen_time_in_min">Business screen time (In Minutes)</string>
    <string name="email">Email</string>
    <string name="dialer">Dialer</string>
    <string name="clear_all">Clear All</string>
    <string name="make_call">Make Call</string>
    <string name="phone_no">Phone No.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="astrik">*</string>
    <string name="_0">0</string>
    <string name="hash">#</string>
    <string name="please_enter_number">Please enter a number</string>
    <string name="terms_of_services_url">
      https://www.phonetaxx.com/terms
    </string>
    <string name="create_payment">Create Payment</string>
    <string name="payment">Payment</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_card">Add Card</string>
    <string name="valide_card_details">Please enter valid details of card</string>
    <string name="selected">Selected</string>
    <string name="subscription_on">Subscription On</string>
    <string name="subscription_off">Subscription Off</string>
    <string name="contacts">Contacts</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_change_message">Your password has been change successfully</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="business_name">Business Name</string>
</resources>