<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        tools:context=".ui.DialerPadActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="@dimen/size_10dp"
                android:gravity="bottom"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:cursorVisible="false"
                    android:gravity="center"
                    android:hint="@string/phone_no"
                    android:textColor="@color/colorBlack"
                    android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivDelete"
                    android:layout_width="@dimen/size_30dp"
                    android:layout_height="@dimen/size_30dp"
                    android:src="@drawable/ic_dialpad_delete" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_32dp"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    tools:text="Hello!!!" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_100dp"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnOne"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_1"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnTwo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_2"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnThree"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_3"
                        android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_100dp"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnFour"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_4"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnFive"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_5"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSix"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_6"
                        android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_100dp"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSeven"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_7"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnEight"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_8"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnNine"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_9"
                        android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_100dp"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnAsterisk"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/astrik"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnZero"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/_0"
                        android:textSize="30sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnHash"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/dialer_number_background"
                        android:text="@string/hash"
                        android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:layout_marginBottom="@dimen/size_10dp"
                    android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnClearAll"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="@dimen/size_20dp"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/clear_all"
                        android:paddingVertical="@dimen/size_8dp"
                        android:textColor="#fff"
                        android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnMakeCall"
                        style="@style/ButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="@dimen/size_20dp"
                        android:fontFamily="@font/rubik_regular"
                        android:paddingVertical="@dimen/size_8dp"
                        android:text="@string/make_call"
                        android:textColor="#fff"
                        android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>