<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/size_20dp"
            app:cardCornerRadius="@dimen/size_20dp"
            tools:context=".ui.navigationdrawer.home.AddNumberDialogFragment">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment">

            <ImageView
                    android:layout_width="@dimen/size_50dp"
                    android:layout_height="@dimen/size_50dp"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/size_12dp"
                    android:src="@drawable/ic_close_dialog"
                    android:id="@+id/ivClose"

            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_toLeftOf="@id/ivClose"
                    android:padding="@dimen/size_16dp"
            >

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvToday"
                        android:text="@string/today"
                        style="@style/FontPrimaryRegular.size_16sp.PrimaryText"
                        android:padding="@dimen/size_20dp"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvWeekly"
                        android:text="@string/weekly"
                        style="@style/FontPrimaryRegular.size_16sp.PrimaryText"
                        android:padding="@dimen/size_20dp"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvMonthly"
                        android:text="@string/monthly"
                        style="@style/FontPrimaryRegular.size_16sp.PrimaryText"
                        android:padding="@dimen/size_20dp"
                />

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
