<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/size_20dp"
            app:cardCornerRadius="@dimen/size_20dp"
            tools:context=".ui.navigationdrawer.home.AddNumberDialogFragment">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello_blank_fragment">

            <ImageView
                    android:layout_width="@dimen/size_50dp"
                    android:layout_height="@dimen/size_50dp"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/size_12dp"
                    android:src="@drawable/ic_close_dialog"
                    android:id="@+id/ivClose"

            />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivClose"
                    android:layout_margin="@dimen/size_20dp"
                    android:orientation="vertical"
            >
                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/FontPrimaryRegular.size_16sp.PrimaryText"
                        android:text="@string/monthly_phone_bill"/>


                <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:id="@+id/etAmount"
                        style="@style/editTextStyle"
                        android:inputType="numberDecimal"
                        android:hint="@string/amount"
                />


                <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/ButtonStyle"

                        android:layout_gravity="center"
                        android:paddingLeft="@dimen/size_70dp"
                        android:paddingRight="@dimen/size_70dp"
                        android:id="@+id/btnSave"
                        android:layout_marginTop="@dimen/size_70dp"
                        android:layout_marginBottom="@dimen/size_20dp"
                        android:text="@string/save"/>

            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>