<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:orientation="vertical"
    tools:context=".ui.signin.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackgroundColor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/size_30dp"
            android:orientation="vertical"
            android:padding="@dimen/size_36dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size_34dp"
                android:layout_height="@dimen/size_68dp"
                android:src="@drawable/ic_app_icon_small" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/FontPrimaryMedium.size_26sp.PrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/forgot_phonetaxx" />

            <View
                android:layout_width="@dimen/size_50dp"
                android:layout_height="6dp"
                android:layout_marginTop="@dimen/size_24dp"
                android:background="@drawable/button_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/size_20dp">

                <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="US"
                    app:ccp_textSize="@dimen/size_16sp"

                    />

                <View
                    android:layout_width="@dimen/size_1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/size_8dp"
                    android:layout_marginTop="@dimen/size_14dp"
                    android:layout_marginBottom="@dimen/size_14dp"
                    android:background="@color/colorBlack" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    style="@style/FontPrimaryRegular.size_16sp.PrimaryText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:paddingLeft="@dimen/size_12dp"
                    android:paddingTop="@dimen/size_16dp"
                    android:paddingRight="@dimen/size_20dp"
                    android:paddingBottom="@dimen/size_16dp"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnForgot"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_36dp"
                android:text="@string/verify_otp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size_36dp"
                android:layout_marginBottom="@dimen/size_30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/FontPrimaryRegular.size_16sp.hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnSignIn"
                    style="@style/FontPrimaryRegular.size_16sp.hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/size_4dp"
                    android:paddingTop="@dimen/size_10dp"
                    android:paddingRight="@dimen/size_10dp"
                    android:paddingBottom="@dimen/size_10dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>